--- a/ar-food/src/index.css
+++ b/ar-food/src/index.css
@@ -2,3 +2,19 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+a-scene {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
